syntax = "proto3";

package proto.service.v1;

option go_package = "github.com/go-jedi/auth/gen/proto/service/v1;protoservice";

import "google/protobuf/empty.proto";
import "google/adapters/annotations.proto";
import "proto/model/v1/user.proto";

service UserV1 {
  rpc Create(CreateRequest) returns (model.v1.User) {
    option (google.api.http) = {
      post: "/v1/user"
      body: "*"
    };
  }

  rpc All(google.protobuf.Empty) returns (AllResponse) {
    option (google.api.http) = {
      get: "/v1/user"
    };
  }

  rpc GetByID(GetByIDRequest) returns (model.v1.User) {
    option (google.api.http) = {
      post: "/v1/user/id"
      body: "*"
    };
  }

  rpc GetByUsername(GetByUsernameRequest) returns (model.v1.User) {
    option (google.api.http) = {
      post: "/v1/user/username"
      body: "*"
    };
  }

  rpc Exists(ExistsRequest) returns (ExistsResponse) {
    option (google.api.http) = {
      post: "/v1/user/ex"
      body: "*"
    };
  }

  rpc ExistsUsername(ExistsUsernameRequest) returns (ExistsUsernameResponse) {
    option (google.api.http) = {
      post: "/v1/user/ex/username"
      body: "*"
    };
  }

  rpc ExistsEmail(ExistsEmailRequest) returns (ExistsEmailResponse) {
    option (google.api.http) = {
      post: "/v1/user/ex/email"
      body: "*"
    };
  }

  rpc Update(UpdateRequest) returns (model.v1.User) {
    option (google.api.http) = {
      patch: "/v1/user"
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns(google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/user/{id}"
    };
  }
}

//
// CREATE
//

message CreateRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

//
// ALL
//

message AllResponse {
  repeated model.v1.User users = 1;
}

//
// GET BY ID
//

message GetByIDRequest {
  int64 id = 1;
}

//
// GET BY USERNAME
//

message GetByUsernameRequest {
  string username = 1;
}

//
// EXISTS USERNAME OR EMAIL
//

message ExistsRequest {
  string username = 1;
  string email = 2;
}

message ExistsResponse {
  bool exists = 1;
}

//
// EXISTS USERNAME
//

message ExistsUsernameRequest {
  string username = 1;
}

message ExistsUsernameResponse {
  bool exists = 1;
}

//
// EXISTS EMAIL
//

message ExistsEmailRequest {
  string email = 1;
}

message ExistsEmailResponse {
  bool exists = 1;
}

//
// UPDATE
//

message UpdateRequest {
  int64 id = 1;
  string username = 2;
  string full_name = 3;
  string email = 4;
  string password = 5;
}

//
// DELETE
//

message DeleteRequest {
  int64 id = 1;
}